--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <div class="box1"><h3>1000 TK</h3></div>
                 <div class="box1"><h3>5000 TK</h3></div>
             </div>
+            <div class="other"><h4>Other Ammount(TK)</h4></div>
+            <br><br><a class="button2" href="https://www.programming-hero.com/">Donate Now</a>
     </section>
     <section>
 
