--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -38,7 +41,36 @@
             <br><br><a class="button2" href="https://www.programming-hero.com/">Donate Now</a>
     </section>
     <section>
+        <h2>Our Donate Plan</h2>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+            deterruisset. No duo populo animal noluisse, enim</p><br><br><br>
+            <div class="box-master">
+                <div class="box2" id="box2i">
+                    <img src="food.png" alt="">
+                    <h4>Food for a family</h4> <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit</p></div>
+                <div class="box2" id="box2j">
+                    <img src="shelter.png" alt="">
+                    <h4>Shelter for a family</h4><p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p></div>
+                <div class="box2" id="box2k">
+                    <img src="Frame-1.png" alt="">
+                    <h4>Education for a child</h4><p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p></div>
 
+            </div>
     </section>
 </body>
+<footer class="site-footer">
+    <div id="footer-containt">
+        <h6>Be Humble</h6>
+        <h5>I’m gonna do it</h5>
+    </div>
+</footer>
 </html>
