--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
          <div class="text">
            <h1>Let’s Help Those Who Are 
             More In Need</h1>
-            <div class="text2"><p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                deterruisset. No duo populo animal noluisse, enim</p></div>
+            <div class="text2"><p>Many people lost everything in this flood.  In such a situation, there is no one to stand by them.  So we want to extend a helping hand to the flood affected people.  This is our initiative to make their public life a little easier. </p>
+            </div>
             <a class="button" href="https://www.programming-hero.com/">Donate Now</a>
          </div>
         </div>
@@ -27,8 +27,7 @@
     <section>
         <div class="Donation">
             <h2>Donate Today</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Through this website we will raise money and directly reach the flood affected people.  Your little help can lift the life of helpless people from the pit of suffering.  Thank you</p>
             </div>
             <div class="box">
                 <div class="box1"><h3>100 TK</h3></div>
@@ -42,27 +41,18 @@
     </section>
     <section>
         <h2>Our Donate Plan</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-            deterruisset. No duo populo animal noluisse, enim</p><br><br><br>
+        <p>With the raised money, our plan is to ensure food, shelter and education for every family in a given area.</p><br><br><br>
             <div class="box-master">
                 <div class="box2" id="box2i">
                     <img src="food.png" alt="">
-                    <h4>Food for a family</h4> <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit</p></div>
+                    <h4>Food for a family</h4> <p>Lack of food is not able to fight the flood situation.  So we want to ensure food system for every family in a particular area.</p></div>
                 <div class="box2" id="box2j">
                     <img src="shelter.png" alt="">
-                    <h4>Shelter for a family</h4><p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p></div>
+                    <h4>Shelter for a family</h4><p>Most of the people were left homeless by the floods.Everything was swept away by the flood water.So we want to ensure accommodation for them.
+                    </p></div>
                 <div class="box2" id="box2k">
                     <img src="Frame-1.png" alt="">
-                    <h4>Education for a child</h4><p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p></div>
+                    <h4>Education for a child</h4><p>Children are away from education for long periods due to floods. So we want to keep the light of education among the flood victims.</p></div>
 
             </div>
     </section>
