--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
             </div>
     </section>
+    <footer class="site-footer">
+        <div id="footer-containt">
+            <h6 class="last1">Be Humble</h6>
+            <h5 class="last2">I’m gonna do it</h5>
+        </div>
+    </footer>
 </body>
-<footer class="site-footer">
-    <div id="footer-containt">
-        <h6>Be Humble</h6>
-        <h5>I’m gonna do it</h5>
-    </div>
-</footer>
 </html>
